<package>
  <name>test_miniros</name>
  <version>1.14.3</version>
  <description>
    Tests for roscpp which depend on rostest.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/roscpp</url>
  <author>Morgan Quigley</author>
  <author>Josh Faust</author>
  <author>Brian Gerkey</author>
  <author>Troy Straszheim</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>miniros</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>roslang</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>rosunit</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>miniros</run_depend>
  <!-- <run_depend>rosgraph_msgs</run_depend>-->
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
</package>
